--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,8 +15,10 @@
  */
 .fond {
     margin: auto;
-    width: 100%;
-    height: 100%;
+    width: 97%;
+    height: 50%;
+    position: absolute;
+    min-height: 300px;
     border: 3px solid green;
     padding: 10px;
 }
@@ -26,8 +28,11 @@ h1 {
 .general_container {
     margin: auto;
     width: 70%;
+    height: 70%;
+    min-height: 50px;
     border: 3px solid blue;
-    padding: 10px
+    padding: 10px;
+    background:rgba(255,255,255,0.5);
 }
 .boutons_onglet {
     display: flex;
@@ -35,4 +40,24 @@ h1 {
 }
 .hidden {
     display: none;
+}
+button {
+    background: linear-gradient(to bottom right, red, white);  /*#4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 20px;
+}
+.all {
+    background-image: url(img.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: 3px solid purple;
+    width: 100%;
+    height: 100%;
+    position: absolute;
 }
