--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -53,7 +53,7 @@ button {
     border-radius: 20px;
 }
 .all {
-    background-image: url('img.jpg');
+    background-image: url('http://img.bfmtv.com/c/1256/708/bfm/1284381.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     border: 3px solid purple;
