--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -53,7 +53,7 @@ button {
     border-radius: 20px;
 }
 .all {
-    background-image: url('img-0f6fadab5632db453ca72a0c4b74e0cf5b37bab2a45bb25f1fe724a382bcf8d5.jpg');
+    background-image: url(<%= asset_path('img.jpg') %>);
     background-repeat: no-repeat;
     background-size: cover;
     border: 3px solid purple;
