--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -19,20 +19,15 @@
     height: 50%;
     position: absolute;
     min-height: 300px;
-    border: 3px solid green;
     padding: 10px;
-}
-h1 {
-    text-align: center;
 }
 .general_container {
     margin: auto;
     width: 70%;
     height: 70%;
     min-height: 50px;
-    border: 3px solid blue;
     padding: 10px;
-    background:rgba(255,255,255,0.5);
+    background: radial-gradient(rgba(255,255,255,1) 40%, rgba(255,255,255,0));
 }
 .boutons_onglet {
     display: flex;
@@ -55,13 +50,13 @@ button {
 .all {
     background-image: url(<%= asset_path('img.jpg') %>);
     background-repeat: no-repeat;
-    background-size: cover;
-    border: 3px solid purple;
+    background-size: 100%;
     width: 100%;
     height: 100%;
     position: absolute;
     display: flex;
     flex-direction: column;
+    text-align: center;
 }
 .carousel {
     margin: auto;
@@ -70,7 +65,6 @@ button {
     position: absolute;
     bottom: 0;
     min-height: 300px;
-    border: 3px solid green;
     padding: 10px;
     display: flex;
     justify-content: space-between;
