--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,9 +33,31 @@ LE PREMIER RESTAURANT QUI RECYCLE LES ÊTRES HUMAINS.
   </div>
   <div class="carousel">
     <button class="button display-left" onclick="plusDivs(-1)">&#10094;</button>
-    <img class="slide" src="/assets/img1.jpg">
-    <img class="slide" src="/assets/img2.jpg">
-    <img class="slide" src="/assets/img3.jpg">
+    <div class="slide">
+      <div class="w3-display-bottomleft w3-container w3-padding-16 w3-black">
+        Salade de peau
+      </div>
+      <img class="slid" src="/assets/img1.jpg">
+    </div>
+    <div class="slide">
+      <div class="w3-display-bottomleft w3-container w3-padding-16 w3-black">
+        pâtes aux doigts de pieds émincés
+      </div>
+      <img class="slid" src="/assets/img2.jpg">
+    </div>
+    <div class="slide">
+      <div class="w3-display-bottomleft w3-container w3-padding-16 w3-black">
+        brochettes de rein
+      </div>
+      <img class="slid" src="/assets/img3.jpg">
+    </div>
     <button class="button display-right" onclick="plusDivs(+1)">&#10095;</button>
+  </div>
+  <div class="circles">
+YO
+    <span class="thisone" onclick="showDivs(2)">ICI</span>
+    <div class="badge" onclick="showDivs(1)"></div>
+    <div class="badge" onclick="showDivs(2)"></div>
+    <div class="badge" onclick="showDivs(3)"></div>
   </div>
 </div>
