--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,11 +16,13 @@
 
         <h1>Découvrez EatItAll.</h1>
 LE PREMIER RESTAURANT QUI RECYCLE LES ÊTRES HUMAINS.
+Nous travaillons en collaboration avec les plus grands hôpitaux de France!
 
       </div>
       <div class="hidden" id=2>
 
           Un menu qui défie les plus grandes lois éthiques.
+Âmes sensibles servies en accompagnement pour un menu midi.
 
       </div>
       <div class="hidden" id=3>
