--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,13 +15,13 @@
       <div class="onglet" id=1>
 
         <h1>Découvrez EatItAll.</h1>
-LE PREMIER RESTAURANT QUI RECYCLE LES ÊTRES HUMAINS.
+LE PREMIER RESTAURANT QUI RECYCLE LES ÊTRES HUMAINS.</br>
 Nous travaillons en collaboration avec les plus grands hôpitaux de France!
 
       </div>
       <div class="hidden" id=2>
 
-          Un menu qui défie les plus grandes lois éthiques.
+          Un menu qui défie les plus grandes lois éthiques.</br>
 Âmes sensibles servies en accompagnement pour un menu midi.
 
       </div>
