--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,19 +15,19 @@
       <div class="onglet" id=1>
 
         <h1>Découvrez EatItAll.</h1>
-LE PREMIER RESTAURANT QUI RECYCLE LES ÊTRES HUMAINS.</br>
-Nous travaillons en collaboration avec les plus grands hôpitaux de France!
+<h3>LE PREMIER RESTAURANT QUI RECYCLE LES ÊTRES HUMAINS.</br>
+Nous travaillons en collaboration avec les plus grands hôpitaux de France!</h3>
 
       </div>
       <div class="hidden" id=2>
 
-          Un menu qui défie les plus grandes lois éthiques.</br>
-Âmes sensibles servies en accompagnement pour un menu midi.
+          <h3>Un menu qui défie les plus grandes lois éthiques.</br>
+Âmes sensibles servies en accompagnement pour un menu midi.</h3>
 
       </div>
       <div class="hidden" id=3>
 
-          Un ongle. On ne sait pas trop.
+          <h3>Un ongle. On ne sait pas trop.</h3>
 
       </div>
 
@@ -56,8 +56,7 @@ Nous travaillons en collaboration avec les plus grands hôpitaux de France!
     <button class="button display-right" onclick="plusDivs(+1)">&#10095;</button>
   </div>
   <div class="circles">
-YO
-    <span class="thisone" onclick="showDivs(2)">ICI</span>
+    <span class="thisone" onclick="showDivs(2)"></span>
     <div class="badge" onclick="showDivs(1)"></div>
     <div class="badge" onclick="showDivs(2)"></div>
     <div class="badge" onclick="showDivs(3)"></div>
